hphp/test/zend/good/Zend/tests/traits/property004.php.expectf
PRE-CLASS-GUARD

Fatal error: trait declaration of property 'hello' is incompatible with previous declaration in %s/property004.php on line 14
